--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^3.2.8",
     "vue-i18n": "^9.2.0-beta.23",
     "vue-router": "^4.0.11",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
