--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^9.5.0",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^6.0.11"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
