--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "fix": "eslint --ext .js,.vue src --fix"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.7",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "element-plus": "^1.2.0-beta.3",
+    "element-plus": "^2.0.2",
     "md5": "^2.3.0",
     "unplugin-vue-components": "^0.17.2",
     "vue": "^3.2.8",
